OpenStack Keystone v3 config examples

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -73,6 +73,7 @@ title: Index
         * [Using IAM instance profiles](aws-iam-instance-profiles.html)
         * [Using instance storage](aws-instance-storage.html)
     * [OpenStack](openstack-cpi.html)
+        * [Using Keystone v3 API](openstack-keystonev3.html)
     * [vSphere](vsphere-cpi.html)
     * [vCloud](vcloud-cpi.html)
     * [Azure](azure-cpi.html) **[beta]**
