--- a/build-stemcell.html.md.erb
+++ b/build-stemcell.html.md.erb
@@ -95,4 +95,4 @@ There are two test suites each stemcell is expected to pass before it's consider
 ---
 [Back to Table of Contents](index.html#extend)
 
-Previous: [CPI API v1](cpi-api-v1.html)
+Previous: [Agent-CPI interactions](agent-cpi-interactions.html)
