--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -507,6 +507,6 @@ No arguments
 - **vm_cid** [String]: Cloud ID of the VM.
 
 ---
-Next: [Building a Stemcell](build-stemcell.html)
+Next: [Agent-CPI interactions](agent-cpi-interactions.html)
 
 Previous: [Building a CPI](build-cpi.html)
