--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -123,5 +123,5 @@ title: Index
  * What is a CPI?
  * [Building a CPI](build-cpi.html)
     * [CPI API v1](cpi-api-v1.html)
-    * [Interactions between CPIs and BOSH Agent](agent-cpi-interactions.html)
+    * [Agent-CPI interactions](agent-cpi-interactions.html)
  * [Building a stemcell](build-stemcell.html)
