--- a/drain.html.md.erb
+++ b/drain.html.md.erb
@@ -60,8 +60,8 @@ Currently logs from the drain script are not redirected to any location. We are 
 ---
 ## <a id="example"></a> Example
 
-```sh
-#!/bin/sh
+<pre class="bash">
+#!/bin/bash
 
 pid_path=/var/vcap/sys/run/worker/worker.pid
 
@@ -75,7 +75,7 @@ fi
 
 echo 0 # ok to exit; do not wait for anything
 exit 0
-```
+</pre>
 
 ---
 [Back to Table of Contents](index.html#release)
