--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -29,13 +29,7 @@ title: Index
  * [Using bosh-init](using-bosh-init.html)
     * [Migrating to bosh-init from the micro CLI plugin](migrate-to-bosh-init.html)
  * [Install BOSH CLI](bosh-cli.html)
-
-### Install BOSH with the micro CLI plugin **[deprecated, but supported]**
-
- * [Bootstrapping an environment](bootstrap.html)
-    * [On AWS](deploy-microbosh-to-aws.html)
-    * [On OpenStack](deploy-microbosh-to-openstack.html)
-    * [On vSphere](deploy-microbosh-to-vsphere.html)
+ * [Install BOSH with the micro CLI plugin **[deprecated, but supported]**](bootstrap.html)
 
 ### <a id="director-config"></a> Advanced Director configuration
 
