--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -163,7 +163,7 @@ errand.
 This is an example `/bin/run` script for a BOSH errand that de-registers a
 service broker.
 
-<pre class='terminal'>
+<pre class="bash">
 #!/bin/bash
 
 set -e
