--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -4,7 +4,7 @@ title: BOSH Components
 
 Before bootstrapping a new [environment](terminology.html#environment) we recommend to learn the names of major components that will be installed, used and configured:
 
-<%= image_tag("images/bosh-architecture.png") %><br />
+<%= image_tag("images/bosh-architecture.png") %>
 
 ---
 ## <a id="cli"></a>Command Line Interface (CLI)
@@ -88,7 +88,7 @@ This example shows how BOSH components interact when creating a new VM.
 
 ### <a id="create-vm"></a>Creating a New VM
 
-<%= image_tag("images/deploy-sequence.png") %><br />
+<%= image_tag("images/deploy-sequence.png") %>
 
 1. Through the BOSH CLI, the operator takes an action (e.g. deploy for the first time, scaling up deployment) which requires creating a new VM.
 1. The CLI passes the instruction to the Director.
