--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -292,7 +292,7 @@ We add this compile-time dependency to our example dependency graph.
 
 The complete dependency graph for `ardo-release` looks like this:
 
-<%= image_tag("./images/dep-graph.png") %><br />
+<%= image_tag("./images/dep-graph.png") %>
 
 For a large or complicated release, consider making more than one dependency
 graph.
