Add port 22 to security group rules

--- a/deploy-microbosh-to-openstack.html.md.erb
+++ b/deploy-microbosh-to-openstack.html.md.erb
@@ -238,6 +238,13 @@ traffic to the BOSH VMs.
 	    <td>0.0.0.0/0 (CIDR)</td>
 	  </tr>
       <tr>
+	    <td>Ingress</td>
+	    <td>IPv4</td>
+	    <td>TCP</td>
+	    <td>22</td>
+	    <td>0.0.0.0/0 (CIDR)</td>
+	  </tr>
+      <tr>
 	    <td>Egress</td>
 	    <td>IPv4</td>
 	    <td>Any</td>
