Added `subnet ID does not exist` error to AWS-CPI errors

--- a/aws-cpi.html.md.erb
+++ b/aws-cpi.html.md.erb
@@ -161,6 +161,12 @@ Network vpc-a09e18c5 is not attached to any internet gateway
 You need to create and attach an internet gateway to your VPC so that VMs can connect to the Internet.
 
 ```
+The subnet ID 'subnet-c3051fad' does not exist
+```
+
+Make sure that the `region` specified in the global CPI configuration matches the region where your specified subnet resides.
+
+```
 Signature expired: 20141106T010406Z is now earlier than 20141106T011252Z (20141106T011752Z - 5 min.)
 ```
 
