--- a/aws-iam-instance-profiles.html.md.erb
+++ b/aws-iam-instance-profiles.html.md.erb
@@ -52,7 +52,7 @@ You may have to create one or more IAM instance profiles to limit access to AWS 
         # ...
     ```
 
-    <p class="note">Note: To use IAM instance profile as a credentials source when using bosh-init, you have to run bosh-init from a [jump box](terminology.html#jumpbox), an existing AWS instance with IAM instance profile (you can reuse `director` IAM role). Alternatively if you are deploying the Director VM from outside of the AWS, you can use hard coded credentials with bosh-init and have the AWS CPI on the Director VM use IAM instance profile as a credentials source.</p>
+    <p class="note">Note: To use IAM instance profile as a credentials source when using bosh-init, you have to run bosh-init from a <a href="terminology.html#jumpbox">jump box</a>, an existing AWS instance with IAM instance profile (you can reuse `director` IAM role). Alternatively if you are deploying the Director VM from outside of the AWS, you can use hard coded credentials with bosh-init and have the AWS CPI on the Director VM use IAM instance profile as a credentials source.</p>
 
 ---
 ## <a id="director-with-s3-blobstore"></a> Example B: AWS CPI and Director configured with an S3 blobstore
