document popular director api actions

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -112,8 +112,9 @@ title: Index
        * [Configuring S3 release blobstore](s3-release-blobstore.html)
 
 ---
-## <a id="extend"></a> Extending BOSH to support other IaaSs
+## <a id="extend"></a> Extending BOSH
 
+ * [Director API v1](director-api-v1.html)
  * What is a CPI?
  * [Building a CPI](build-cpi.html)
     * [CPI API v1](cpi-api-v1.html)
