rearrange logs doc

--- a/drain.html.md.erb
+++ b/drain.html.md.erb
@@ -53,9 +53,9 @@ Drain script can access the following environment variables:
 Use this feature to monitor job properties. For example drain script can use this feature to determine if the size of the persistent disk changes and take a specified action.
 
 ---
-## <a id="logging"></a> Logging
+## <a id="logs"></a> Logs
 
-Currently logs from the drain script are not redirected to any location. We are planning to eventually make it more consistent with pre-start script logging.
+Currently logs from the drain script are not saved on disk by default, though release author may choose to do so explicitly. We are planning to eventually make it more consistent with [pre-start script logging](pre-start.html#logs).
 
 ---
 ## <a id="example"></a> Example
