--- a/job-logs.html.md.erb
+++ b/job-logs.html.md.erb
@@ -2,44 +2,56 @@
 title: Location and use of logs
 ---
 
-This topic describes different types of logs for BOSH jobs and errands and how you access and view them.
+This topic describes different types of logs and how to access them.
 
-## <a id="jobs-logging"></a> Job Logging
+## <a id="vm-logs"></a> VM logs
 
-You can access logs by two methods:
+You can access logs from any VM:
 
- * Using the `bosh ssh` command to SSH into a VM and look at the log files.
- * Using the `bosh logs` command to download logs from the VM.
+* via [`bosh ssh` command](sysadmin-commands.html#ssh) to SSH into a VM and look at the log files
+* via [`bosh logs` command](sysadmin-commands.html#logs) to download logs from the VM
 
-The following sections describe different types of logs.
+The following sections describe different types of logs found on each BOSH managed VM.
 
-### <a id="jobs-logs"></a> Job Logs
+---
+### <a id="job-logs"></a> Job logs
 
-Release jobs on VMs produce logs throughtout different lifecycle events. Release authors are strongly encouraged to place release job logs into `/var/vcap/sys/log/<release_job_name>/*.log`, providing a consistent place for the operator to find them.
+Release jobs on VMs produce logs throughout different lifecycle events. Release authors are strongly encouraged to place release job logs into `/var/vcap/sys/log/<release_job_name>/*.log`, providing a consistent place for the operator to find them.
 
 For example `redis-server` release job will create two log files:
 
 - `/var/vcap/sys/log/redis-server/redis-server.stdout.log`
 - `/var/vcap/sys/log/redis-server/redis-server.stderr.log`
 
-To download logs from all release jobs from a specific instance, run `bosh logs <job_name> <index>`.
+To download logs from all release jobs on a specific VM, run `bosh logs <job_name> <index>`.
 
-#### <a id="log-rotation"></a> Log Rotation
+See additonal information about following job lifecycle events' logs:
 
-BOSH log rotates release job logs with the [Logrotate](http://linuxconfig.org/logrotate) log file management utility. BOSH instructs Logrotate to act on all `.log` files in the `/var/vcap/sys/log/`, `/var/vcap/sys/log/*/`, and `/var/vcap/sys/log/*/*/` directories.
+- [pre-start script logs](pre-start.html#logs)
+- [drain script logs](drain.html#logs)
 
-Logrotate is configured by the Agent and runs automatically with the following non-configurable settings:
+---
+### <a id="errand-logs"></a> Errand logs
 
-* `missingok`: Skip missing log files and do not generate an error message
-* `rotate 7`: Keep seven log files at a time
-* `compress`: Compress old log files with gzip
-* `delaycompress`: Postpone compression of log files until the next rotation cycle
-* `copytruncate`: Copy log files, then truncate in place instead of creating new files
-* `size 50M`: Rotate log files when they exceed 50 MB in size
+BOSH names logs using the errand name and log type, and writes the logs to the `/var/vcap/sys/log/<errand-name>` directory. For example, BOSH writes the stdout log for an errand named "smoke-test" to `/var/vcap/sys/log/smoke-test/smoke-test.stdout.log`.
 
-Cron runs logrotate script every hour.
+<p class="note">Note: By default upon errand completion errand VM is deleted, so you cannot access full errand logs. You can use <code>--keep-alive</code> flag when running an errand to keep the VM with its logs.</p>
 
-### <a id="monit-logs"></a> Monit Logs
+By default, the CLI outputs errand's output to the screen when it's smaller than 1MB. If you expect errand to generate output larger than 1MB, currently it needs to be redirected to a file and then downloaded.
+
+To save output from an errand VM:
+
+1. In the errand run script, redirect the output to a log.
+1. Using the CLI, run `bosh run errand X` with the `--download-logs` option to download the logs.
+
+    By default, the CLI downloads the logs to your present working directory. Use the `--logs-dir destination_directory` option to change this directory.
+
+<pre class="terminal">
+$ bosh run errand smoke-tests --download-logs --logs-dir ~/workspace/smoke-tests-logs
+</pre>
+
+---
+### <a id="monit-logs"></a> Monit logs
 
 The Agent uses Monit to start, restart, and stop release job processes as specified by the release jobs. Monit detects errors and outputs often useful information to its log. Use `tail` to examine the `monit.log` on a VM:
 
@@ -47,7 +59,8 @@ The Agent uses Monit to start, restart, and stop release job processes as specif
 $ sudo tail -f -n 200 /var/vcap/monit/monit.log
 </pre>
 
-### <a id="agent-logs"></a> Agent Logs
+---
+### <a id="agent-logs"></a> Agent logs
 
 Agent logs contain configuration and runtime information from the Agent running on a VM. Review these logs if the Director sees VM as unresponsive or the Director fails to contact it during its creation.
 
@@ -58,32 +71,32 @@ $ sudo tail -f -n 200 /var/vcap/bosh/log/current
 </pre>
 
 ---
-## <a id="errand-logs"></a>Errand Logging ##
+### <a id="log-rotation"></a> Log rotation
 
-BOSH names logs using the errand name and log type, and writes the logs to the `/var/vcap/sys/log/<errand-name>` directory.
-For example, BOSH writes the stdout log for an errand named "smoke-test" to `/var/vcap/sys/log/smoke-test/smoke-test.stdout.log`.
+BOSH log rotates release job logs with the [Logrotate](http://linuxconfig.org/logrotate) log file management utility. Logrotate is configured by the Agent to act on all `.log` files in the `/var/vcap/sys/log/`, `/var/vcap/sys/log/*/`, and `/var/vcap/sys/log/*/*/` directories.
 
-<p class="note"><strong>Note</strong>: Since BOSH deletes the VM when an errand completes, you cannot access full logs after errand completes.</p>
+Following non-configurable settings are used:
 
-By default, the CLI outputs errand's output to the screen when it's smaller than 1MB. If you expect errand to generate output larger than 1MB, currently it needs to be redirected to a file and then downloaded.
+* `missingok`: Skip missing log files and do not generate an error message
+* `rotate 7`: Keep seven log files at a time
+* `compress`: Compress old log files with gzip
+* `delaycompress`: Postpone compression of log files until the next rotation cycle
+* `copytruncate`: Copy log files, then truncate in place instead of creating new files
+* `size 50M`: Rotate log files when they exceed 50 MB in size
 
-To save output from a BOSH errand VM:
-
-1. In the errand run script, redirect the output to a log.
-1. Using the CLI, run `bosh run errand X` with the `--download-logs` option to download the logs.
-
-    By default, BOSH downloads the logs to your present working directory. Use the `--logs-dir destination_directory` option to change this directory.
-
-<pre class="terminal">
-$ bosh run errand smoke-tests --download-logs --logs-dir ~/workspace/smoke-tests-logs
-</pre>
+Cron runs logrotate script every hour.
 
 ---
-## <a id="director-logs"></a> Director Task Logs
+### <a id="syslog-conf"></a> Syslog configuration
 
-When you run a BOSH command using the [CLI](./bosh-cli.html), the Director stores all activities for the specific command in a task log. Review these logs when you experience an issue with a BOSH command.
+BOSH does not currently offer a built-in way to configure syslog to forward all logs to a remote host. Currently recommended way to do so would be to add a release job to each deployment job that configures syslogd as desired.
+
+---
+## <a id="director-logs"></a> Director task logs
+
+When you run a [CLI](bosh-cli.html) command, the Director stores all activities for the specific command in a task log. Review these logs when you experience an issue with a command.
 
 To access Director task logs:
 
-1. Run `bosh tasks recent` to find the task number of the failed command.
-1. Run `bosh task <task_number>`.
+1. Run [`bosh tasks recent`](sysadmin-commands.html#tasks) to find the task number of the command.
+1. Run [`bosh task <task_number>`](sysadmin-commands.html#tasks).
