--- a/pre-start.html.md.erb
+++ b/pre-start.html.md.erb
@@ -34,7 +34,7 @@ Pre-start script is called every time before job is started via monit, which mea
 
 Pre-start scripts from a single deployment job, which typically is composed of multiple release jobs, are executed in parallel.
 
-## <a id="logging"></a> Logging
+## <a id="logs"></a> Logs
 
 You can find logs for each release job's pre-start script in the following locations:
 
