--- a/pre-start.html.md.erb
+++ b/pre-start.html.md.erb
@@ -2,12 +2,13 @@
 title: Pre-start Script
 ---
 
-<p class="note"><strong>Note</strong>: This feature is available with bosh-release v206+ (1.3072.0) and only for releases deployed with 3072+ stemcells. bosh-lite support is planned but currently is not available since latest available stemcell for bosh-lite is 2774.</p>
+<p class="note">Note: This feature is available with bosh-release v206+ (1.3072.0) and only for releases deployed with 3125+ stemcells. bosh-lite support is planned but currently is not available since latest available stemcell for bosh-lite is 2774.</p>
 
-<p class="note"><strong>Note</strong>: Releases that make use of pre-start scripts and are deployed on older stemcells or with an older Director may potentially deploy; however, pre-start script will not be called.</p>
+<p class="note">Note: Releases that make use of pre-start scripts and are deployed on older stemcells or with an older Director may potentially deploy; however, pre-start script will not be called.</p>
 
 Release job can have a pre-start script that will run before the job is started. This script allows the job to prepare machine and/or persistent data before starting its operation. For example, when writing a release for Cassandra, each node will need to migrate format of SSTables. That procedure may be lengthy and should happen before the node can successfully start.
 
+---
 ## <a id="job-configuration"></a> Job Configuration
 
 To add a pre-start script to a release job:
@@ -24,6 +25,7 @@ templates:
   pre-start.erb: bin/pre-start
 ```
 
+---
 ## <a id="script-implementation"></a> Script Implementation
 
 Pre-start script is usually just a regular shell script. Since pre-start script is executed in a similar way as other release job scripts (start, stop, drain scripts) you can use job's package dependencies.
@@ -34,6 +36,7 @@ Pre-start script is called every time before job is started via monit, which mea
 
 Pre-start scripts from a single deployment job, which typically is composed of multiple release jobs, are executed in parallel.
 
+---
 ## <a id="logs"></a> Logs
 
 You can find logs for each release job's pre-start script in the following locations:
